pula_rustico/index.css
/* Copyright 2013 The Chromium Authors. All rights reserved.
 * Use of this source code is governed by a BSD-style license that can be
 * found in the LICENSE file. */

html, body {
  padding: 0;
  margin: 0;
}

html {
  height: 100%;
}

canvas {
  background: linear-gradient(0, #B36362 0%, #B36362 5%,rgba(0,0,0,0) 5.1%, rgba(0,0,0,0) 100%);
}

.icon {
  -webkit-user-select: none;
  user-select: none;
  display: inline-block;
}

.icon-offline {
  content: -webkit-image-set( url(assets/default_100_percent/100-error-offline.png) 1x, url(assets/default_200_percent/200-error-offline.png) 2x);
  position: relative;
}

.hidden {
  display: none;
}

#main-content {
  display: none;
}

/* Offline page */

.offline .interstitial-wrapper {
  color: #2b2b2b;
  font-size: 1em;
  line-height: 1.55;
  margin: 0 auto;
  max-width: 600px;
  padding-top: 100px;
  width: 100%;
  position: relative;
}

.offline .runner-container {
  height: 300px;
  max-width: 600px;
  width: 100%;
  overflow: hidden;
  position: absolute;
  top: 35px;
  background-image: url('assets/default_200_percent/fundo_repeticao.jpg');
  background-repeat: repeat-x;
  background-size: auto 300px;
  background-position-x: 0px;
  border: 3px solid rgb(247,165,1);
  border-radius: 10px;
}

.offline .runner-canvas {
  height: 300px;
  max-width: 600px;
  opacity: 1;
  overflow: hidden;
  position: absolute;
  top: 0;
  z-index: 2;
}

.offline .controller {
  background: rgba(247, 247, 247, .1);
  height: 100vh;
  left: 0;
  position: absolute;
  top: 0;
  width: 100vw;
  z-index: 1;
}

#offline-resources {
  display: none;
}

#press-space-mobile {
  display: none;
}

@media (max-width: 420px) {
  .suggested-left > #control-buttons, .suggested-right > #control-buttons {
    float: none;
  }
  .snackbar {
    left: 0;
    bottom: 0;
    width: 100%;
    border-radius: 0;
  }
}
  
@media (max-width: 720px) {
  #press-space {
    display: none;
  }
  #press-space-mobile {
    display: block;
  }

  .offline .runner-container {
    top: 0;
  }
}

@media (max-height: 350px) {
  h1 {
    margin: 0 0 15px;
  }
  .icon-offline {
    margin: 0 0 10px;
  }
  .interstitial-wrapper {
    margin-top: 5%;
  }
  .nav-wrapper {
    margin-top: 30px;
  }
}

@media (min-width: 600px) and (max-width: 736px) and (orientation: landscape) {
  .offline .interstitial-wrapper {
    margin-left: 0;
    margin-right: 0;
  }
}

@media (min-width: 420px) and (max-width: 736px) and (min-height: 240px) and (max-height: 420px) and (orientation:landscape) {
  .interstitial-wrapper {
    margin-bottom: 100px;
  }
}

@media (min-height: 240px) and (orientation: landscape) {
  .offline .interstitial-wrapper {
    margin-bottom: 0;
  }
  .icon-offline {
    margin-bottom: 20px;
  }
}

@media (min-width: 720px) {
  html {
    zoom: 2;
  }
}

@media (max-height: 720px) and (orientation: landscape) {
  .icon-offline {
    margin: 0;
  }
  .offline .runner-container {
    top: 0px;
  }
}

@media (max-width: 240px) {
  .interstitial-wrapper {
    overflow: inherit;
    padding: 0 8px;
  }
}

@media (-webkit-min-device-pixel-ratio: 1) {
  html {
    zoom: 1.5;
    image-rendering: pixelated;
  }
}

@media (max-height: 300px) {
  .offline .runner-container {
    height: 100%;
  }
  
  .offline .runner-canvas {
    height: 100%;
  }
}

